// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.students_information.stubs.result;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

// Students grades are given either as PASS or FAIL.
enum Grade{
  PASS = 0;
  FAIL = 1;
  UNKNOWN=2;
}

message ResultCreateRequest{
  string student_id = 1;
  Grade maths = 2;
  Grade art = 3;
  Grade chemistry = 4;
}
message ResultCreateResponse{
  string student_id = 1;
}

message ResultReadRequest{
  string student_id = 1;
}
message ResultReadResponse{
  string student_id = 1;
  Grade maths = 2;
  Grade art = 3;
  Grade chemistry = 4;
}

message ResultUpdateRequest{
  string student_id = 1;
  Grade maths = 2;
  Grade art = 3;
  Grade chemistry = 4;
}
message ResultUpdateResponse{
  string student_id = 1;
}

message ResultDeleteRequest{
  string student_id = 1;
}
message ResultDeleteResponse{
  int64 deletedCount = 1;
}

// Now let's define our service
service ResultService{
  rpc create(ResultCreateRequest) returns (ResultCreateResponse);
  rpc read(ResultReadRequest) returns (ResultReadResponse);
  rpc update(ResultUpdateRequest) returns (ResultUpdateResponse);
  rpc delete(ResultDeleteRequest) returns (ResultDeleteResponse);

}
